added base path

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
+	<base href="https://www.lassi-koykka.fi/new">
 	<title>Lassi Köykkä</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
