--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
+	<script type="text/javascript">
+		document.head.innerHTML = document.head.innerHTML + "<base href='" + document.location.href + "' />"
+	</script>
 	<title>Lassi Köykkä</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
@@ -20,7 +23,8 @@
 	<!-- Roboto Mono -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
 	<!-- Nunito Sans -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap">
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
