Yet another try

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<script type="text/javascript">
-	document.head.innerHTML = document.head.innerHTML + "<base href='" + document.location.href + "' />"
-</script>
 
 <head>
 	<meta charset='utf-8'>
@@ -26,6 +23,7 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap">
 
+	<script defer src='/new/build/bundle.js'></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
