--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<script type="text/javascript">
-	document.head.innerHTML = document.head.innerHTML + "<base href='" + document.location.href + "' />"
-</script>
 
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<!-- <script type="text/javascript">
+		document.head.innerHTML = document.head.innerHTML + "<base href='" + document.location.href + "' />"
+	</script> -->
+	<base href="https://www.lassi-koykka.fi/new" target="_blank">
 
 	<title>Lassi Köykkä</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/build/smui-dark.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='icon' type='image/png' href='favicon.png'>
+	<link rel='stylesheet' href='build/smui-dark.css'>
+	<link rel='stylesheet' href='build/bundle.css'>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -26,7 +27,7 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap">
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='build/bundle.js'></script>
 </head>
 
 <body>
