Fo real this time

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,8 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<!-- <script type="text/javascript">
-		document.head.innerHTML = document.head.innerHTML + "<base href='" + document.location.href + "' />"
-	</script> -->
-	<base href="https://www.lassi-koykka.fi/new" target="_blank">
+>
+	<base href="/new" >
 
 	<title>Lassi Köykkä</title>
 
