--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script type="text/javascript">
+	if (!location.host.includes("localhost"))
+		document.head.innerHTML = document.head.innerHTML + "<base href='/new/' />";
+</script>
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<base href="/new/" >
 
 	<title>Lassi Köykkä</title>
 
