--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script type="text/javascript">
-	if (!location.host.includes("localhost"))
-		document.head.innerHTML = document.head.innerHTML + "<base href='/new/' />";
-</script>
-
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Lassi Köykkä</title>
 
-	<link rel='icon' type='image/png' href='favicon.png'>
-	<link rel='stylesheet' href='build/smui-dark.css'>
-	<link rel='stylesheet' href='build/bundle.css'>
+	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='/build/smui-dark.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -28,7 +23,7 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap">
 
-	<script defer src='build/bundle.js'></script>
+	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
