Added a redirect to new page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="forest">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/technologist.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lassi Köykkä</title>
-    <script type="module" crossorigin src="/assets/index.7a093e16.js"></script>
-    <link rel="stylesheet" href="/assets/index.daf2d4e3.css">
+    <meta http-equiv="refresh" content="0; URL=https://lassi-koykka.fi">
+    <link rel="canonical" href="https://lassi-koykka.fi/">
+    <title>Redirecting to https://lassi-koykka.fi/</title>
   </head>
-  <body>
-    <div id="app"></div>
-    
-  </body>
 </html>
